# LightInkLog

./: README.md
Example/src/: Main.cpp
Linux/: CMakeLists.txt
Linux/Example/: CMakeLists.txt
Linux/LightInkLog/: CMakeLists.txt
include/: Config.h  Log.h  LogMsg.h  WinSnprintf.h
include/Atomic/: Atomic.h  Guard.h  atomic_gcc_arm.h  core.h  mintomic.h  mintomic_gcc_arm.h  turf.h
include/Common/: AsyncQueue.h  AutoPtr.cpp  AutoPtr.h  Config.h  LightInkVersion.h  OsHelper.h  RefCounter.h  RuntimeError.h  STLType.h  SharedPtr.cpp  SharedPtr.h  SingletonBase.h  Type.h
include/Log/: FixedLogger.h  Log.h  LogConfig.h  LogFlagFormat.h  LogFormat.h  LogItem.h  LogOption.h  LogThreadType.h  Logger.h  LoggerMgr.h
include/Log/async/: AsyncMsg.h  AsyncThread.h
include/Log/channel/: DateNameStrategy.h  LogChannel.h  LogChannelAndroid.h  LogChannelFile.h  LogChannelList.h  LogChannelMT.h  LogChannelMsvc.h  LogChannelNull.h  LogChannelOstream.h  LogChannelStd.h  LogChannelStdColor.h
include/Log/helper/: FileHelper.h  FormatHelper.h  LogTraceHelper.h  OsHelper.h
include/fmt/: fmt.h  format.h  format.hpp  ostream.h
src/: LogMsg.cpp  WinSnprintf.c
src/Atomic/: atomic_gcc_arm.c
src/Common/: LightInkVersion.cpp  OsHelper.cpp  RuntimeError.cpp
src/Log/: LogFormat.cpp  LogOption.cpp  LogThreadType.cpp  Logger.cpp  LoggerMgr.cpp
src/Log/async/: AsyncMsg.cpp  AsyncThread.cpp
src/Log/channel/: DateNameStrategy.cpp  LogChannelAndroid.cpp  LogChannelStdColor.cpp
src/Log/helper/: FileHelper.cpp  FormatHelper.cpp
windows/: LightInkLog.sln  clear.bat
windows/Example/: Example.vcxproj  Example.vcxproj.filters
windows/LightInkLog/: LightInkLog.vcxproj  LightInkLog.vcxproj.filters
